Auto select protobuf descriptor